--- a/frontend/staff-Dashboard.html
+++ b/frontend/staff-Dashboard.html
@@ -57,6 +57,7 @@ select{padding:6px 8px;border-radius:6px;border:1px solid var(--accent-2);backgr
       <div class="nav-item active" data-section="dashboard">🏠 Dashboard</div>
       <div class="nav-item" data-section="register" onclick="location='register.html'">➕ Register Garment</div>
       <div class="nav-item" data-section="update" onclick="location='update.html'">🔄 Update Status</div>
+      <div class="nav-item" data-section="scanner" onclick="location='qr-scanner.html'">📱 Scan QR Code</div>
       <div class="nav-item" data-section="logout" onclick="logout()">🚪 Logout</div>
     </nav>
     <div class="profile">
