--- a/frontend/admindashboard.html
+++ b/frontend/admindashboard.html
@@ -12,6 +12,7 @@
     <aside class="sidebar">
       <h2 class="logo">Admin Panel</h2>
       <ul class="nav-links">
+        <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
         <li><a href="admindashboard.html" class="active">Dashboard</a></li>
         <li><a href="users.html">Users</a></li>
         <li><a href="adminOrders.html">Orders</a></li>
@@ -24,9 +25,11 @@
     <main class="main-content">
       <header class="header">
         <h1>Dashboard</h1>
-        <div class="user-info">
-          <span>Admin</span>
-          <img src="profile.jpg" alt="Profile" class="profile-pic">
+        <div class="user-info" style="display: flex; align-items: center; gap: 10px;">
+          <div class="profile-avatar" style="width: 40px; height: 40px; border-radius: 50%; background: #4a6cf7; color: white; display: flex; align-items: center; justify-content: center; font-size: 20px; font-weight: bold;" id="adminAvatar">A</div>
+          <div>
+            <span>Admin</span>
+          </div>
         </div>
       </header>
 
