--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -44,6 +44,11 @@
 </head>
 <body>
   <div class="container">
+    <div style="text-align: center; margin-bottom: 20px;">
+      <a href="../index.html" style="color: #667eea; text-decoration: none; font-size: 14px;">
+        <i class="fas fa-arrow-left"></i> Back to Home
+      </a>
+    </div>
     <h1>Sign Up</h1>
     <p class="subtitle">Create an account</p>
 
