--- a/frontend/payment-history.html
+++ b/frontend/payment-history.html
@@ -105,6 +105,7 @@
 </div>
 
 <script>
+const API_BASE = 'http://localhost:5002';
 const formatKES = amount => `KES ${Number(amount).toLocaleString('en-KE')}`;
 
 let payments = [];
